--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 function send(){
 
-    alert("Backend works only on local PC. Please run Flask.");
-return;
+     fetch("http://127.0.0.1:5000/predict",{
 
         method:"POST",
         
